fix: scrolling when mobile banner is visible

--- a/sample-apps/react/react-video-demo/src/components/Layout/LobbyLayout/LobbyLayout.module.css
+++ b/sample-apps/react/react-video-demo/src/components/Layout/LobbyLayout/LobbyLayout.module.css
@@ -12,7 +12,8 @@
 }
 
 .mobileBannerVisible {
-  height: calc(100vh - 80px);
+  height: auto;
+  grid-template-rows: auto;
 }
 
 @media screen(md) {
